--- a/Planning_gantt.tex
+++ b/Planning_gantt.tex
@@ -1,5 +1,6 @@
 \documentclass[11pt,a4paper]{article}
 \usepackage{pgfgantt}
+\usepackage{pdflscape}
 
 \begin{document}
 \title{Planning Software For Science.}
@@ -13,9 +14,6 @@
 \renewcommand\sfdefault{phv}
 \renewcommand\mddefault{mc}
 \renewcommand\bfdefault{bc}
-\setganttlinklabel{s-s}{START-TO-START}
-\setganttlinklabel{f-s}{FINISH-TO-START}
-\setganttlinklabel{f-f}{FINISH-TO-FINISH}
 \sffamily
 \begin{ganttchart}[
 	canvas/.append style={fill=none, draw=black!5, line width=.75pt},
@@ -51,37 +49,16 @@
 \gantttitle[
 	title label node/.append style={below left=7pt and -3pt}
 ]{WEEKS:\quad1}{1}
-\gantttitlelist{2,...,13}{1} \\
-\ganttgroup[progress=57]{WBS 1 Summary Element 1}{1}{10} \\
-\ganttbar[
-	progress=75,
-	name=WBS1A
-]{\textbf{WBS 1.1} Activity A}{1}{8} \\
-\ganttbar[
-	progress=67,
-	name=WBS1B
-]{\textbf{WBS 1.2} Activity B}{1}{3} \\
-\ganttbar[
-	progress=50,
-	name=WBS1C
-]{\textbf{WBS 1.3} Activity C}{4}{10} \\
-\ganttbar[
-	progress=0,
-	name=WBS1D
-]{\textbf{WBS 1.4} Activity D}{4}{10} \\[grid]
-\ganttgroup[progress=0]{WBS 2 Summary Element 2}{4}{10} \\
-\ganttbar[progress=0]{\textbf{WBS 2.1} Activity E}{4}{5} \\
-\ganttbar[progress=0]{\textbf{WBS 2.2} Activity F}{6}{8} \\
-\ganttbar[progress=0]{\textbf{WBS 2.3} Activity G}{9}{10}
-\ganttlink[link type=s-s]{WBS1A}{WBS1B}
-\ganttlink[link type=f-s]{WBS1B}{WBS1C}
-\ganttlink[
-	link type=f-f,
-	link label node/.append style=left
-]{WBS1C}{WBS1D}
+\gantttitlelist{2,...,15}{1} \\
+\ganttgroup{Release 0.01}{1}{2} \\
+\ganttbar{\textbf{1.1} Planning (Gantt)}{1}{1} \\
+\ganttbar{\textbf{1.2} Unit tests}{1}{1} \\
+\ganttbar{\textbf{1.3} Combining projects}{1}{1} \\
+\ganttbar{\textbf{WBS 1.4} Activity D}{4}{10} \\[grid]
+\ganttgroup{Sprint 1}{4}{10} \\
+\ganttbar{\textbf{WBS 2.1} Activity E}{4}{5} \\
+\ganttbar{\textbf{WBS 2.2} Activity F}{6}{8} \\
+\ganttbar	{\textbf{WBS 2.3} Activity G}{9}{10}
 \end{ganttchart}
-TODAY
-WE
-
 
 \end{document}
