--- a/Planning_gantt.tex
+++ b/Planning_gantt.tex
@@ -50,12 +50,24 @@
 	title label node/.append style={below left=7pt and -3pt}
 ]{WEEKS:\quad1}{1}
 \gantttitlelist{2,...,15}{1} \\
-\ganttgroup{Release 0.01}{1}{2} \\
-\ganttbar{\textbf{1.1} Planning (Gantt)}{1}{1} \\
-\ganttbar{\textbf{1.2} Unit tests}{1}{1} \\
-\ganttbar{\textbf{1.3} Combining projects}{1}{1} \\
-\ganttbar{\textbf{WBS 1.4} Activity D}{4}{10} \\[grid]
+\ganttgroup{Sprint 0}{1}{2} \\
+\ganttbar[bar progress label font=\color{green!25!black}\sffamily]{\textbf{1} Connectie met Sigproc}{1}{2} \\
+\ganttbar{\textbf{2} Travis with Pylint and Codecov}{1}{2} \\
+\ganttbar{\textbf{3} Hello world with Python}{1}{2}\\
+\ganttbar{\textbf{4} Requirements in README}{1}{2}\\
+\ganttbar{\textbf{3} Hello world with Python}{1}{2}\\
+
+\ganttgroup{Sprint 1}{2}{3} \\
+\ganttbar{\textbf{1} Planning (Gantt)}{2}{3} \\
+\ganttbar{\textbf{2} Unit tests}{2}{3} \\
+\ganttbar{\textbf{3} Combining projects}{2}{3} \\
+\ganttbar{\textbf{4} Activity D}{4}{10} \\[grid]
+
 \ganttgroup{Sprint 1}{4}{10} \\
+\ganttbar{\textbf{WBS 2.1} Activity E}{4}{5} \\
+\ganttbar{\textbf{WBS 2.2} Activity F}{6}{8} \\
+\ganttbar	{\textbf{WBS 2.3} Activity G}{9}{10}\\
+\ganttgroup{Sprint 2}{4}{10} \\
 \ganttbar{\textbf{WBS 2.1} Activity E}{4}{5} \\
 \ganttbar{\textbf{WBS 2.2} Activity F}{6}{8} \\
 \ganttbar	{\textbf{WBS 2.3} Activity G}{9}{10}
