added sprint 1 tasks

--- a/Planning_gantt.tex
+++ b/Planning_gantt.tex
@@ -56,16 +56,18 @@
 \ganttbar{\textbf{3} Hello world with Python}{1}{2}\\
 \ganttbar{\textbf{4} Requirements in README}{1}{2}\\
 \ganttbar{\textbf{5} Hello world with Python}{1}{2}\\
-\ganttbar{\textbf{1} License toevoegen}{1}{2} \\
-\ganttbar{\textbf{2} Unit tests}{1}{2} \\
-\ganttbar{\textbf{3} Libraries samenvoegen}{1}{2}\\
-\ganttbar{\textbf{4} Inlezen downsampling}{1}{2}\\
+\ganttbar{\textbf{6} License toevoegen}{1}{2} \\
+\ganttbar{\textbf{7} Unit tests}{1}{2} \\
+\ganttbar{\textbf{8} Libraries samenvoegen}{1}{2}\\
+\ganttbar{\textbf{9} Inlezen downsampling}{1}{2}\\
 
-\ganttgroup{Sprint 3}{2}{3} \\
-\ganttbar{\textbf{1} Planning (Gantt)}{2}{3} \\
-\ganttbar{\textbf{2} Unit tests}{2}{3} \\
-\ganttbar{\textbf{3} Combining projects}{2}{3} \\
-\ganttbar{\textbf{4} Activity D}{4}{10} \\[grid]
+\ganttgroup{Sprint 1}{2}{3} \\
+\ganttbar{\textbf{1} Planning (Gantt)}{3}{4} \\
+\ganttbar{\textbf{2} Unit tests bijwerken}{3}{4} \\
+\ganttbar{\textbf{3} Projecten samenvoegen}{3}{4} \\
+\ganttbar{\textbf{4} SCRUM implementeren}{3}{4} \\
+\ganttbar{\textbf{1} Read raw bytes}{3}{4} \\
+\ganttbar{\textbf{2} Implement Fourier}{2}{3} \\
 
 \ganttgroup{Sprint 4}{4}{10} \\
 \ganttbar{\textbf{WBS 2.1} Activity E}{4}{5} \\
