--- a/Planning_gantt.tex
+++ b/Planning_gantt.tex
@@ -19,7 +19,7 @@
 	canvas/.append style={fill=none, draw=black!5, line width=.75pt},
 	hgrid style/.style={draw=black!5, line width=.75pt},
 	vgrid={*1{draw=black!5, line width=.75pt}},
-	today=7,
+	today=2,
 	today rule/.style={
 		draw=black!64,
 		dash pattern=on 3.5pt off 4.5pt,
@@ -51,15 +51,20 @@
 ]{WEEKS:\quad1}{1}
 \gantttitlelist{2,...,15}{1} \\
 \ganttgroup{Sprint 0}{1}{2} \\
-\ganttbar{\textbf{1} Connectie met Sigproc}{1}{2} \\
 \ganttbar{\textbf{2} Travis with Pylint and Codecov}{1}{2} \\
 \ganttbar{\textbf{3} Hello world with Python}{1}{2}\\
 \ganttbar{\textbf{4} Requirements in README}{1}{2}\\
 \ganttbar{\textbf{5} Hello world with Python}{1}{2}\\
-\ganttbar{\textbf{1} License toevoegen}{1}{2} \\
-\ganttbar{\textbf{2} Unit tests}{1}{2} \\
-\ganttbar{\textbf{3} Libraries samenvoegen}{1}{2}\\
-\ganttbar{\textbf{4} Inlezen downsampling}{1}{2}\\
+\ganttbar{\textbf{6} License toevoegen}{1}{2} \\
+\ganttbar{\textbf{7} Unit tests}{1}{2} \\
+\ganttbar{\textbf{8} Libraries samenvoegen}{1}{2}\\
+\ganttbar{\textbf{9} Hello world with Python}{1}{2} \\
+\ganttbar{\textbf{10} Requirements in README}{1}{2} \\
+\ganttbar[bar/.append style={fill=red}]{\textbf{11} Connectie met Sigproc}{1}{2} \\
+\ganttbar[bar/.append style={fill=red}]{\textbf{12} Inlezen downsampling}{1}{2}\\
+\ganttbar[bar/.append style={fill=red}]{\textbf{13} Hello world with Python}{1}{2} \\
+\ganttbar[bar/.append style={fill=blue}]{\textbf{14} Use pyrtlsdr package}{1}{2} \\
+\ganttbar[bar/.append style={fill=blue}]{\textbf{15} Fourier transformation }{1}{2} \\
 
 \ganttgroup{Sprint 3}{2}{3} \\
 \ganttbar{\textbf{1} Planning (Gantt)}{2}{3} \\
@@ -75,6 +80,7 @@
 \ganttbar{\textbf{WBS 2.1} Activity E}{4}{5} \\
 \ganttbar{\textbf{WBS 2.2} Activity F}{6}{8} \\
 \ganttbar	{\textbf{WBS 2.3} Activity G}{9}{10}
+
 \end{ganttchart}
 
 \end{document}
