--- a/Planning_gantt.tex
+++ b/Planning_gantt.tex
@@ -61,22 +61,19 @@
 \ganttbar{\textbf{8} Libraries samenvoegen}{1}{2}\\
 \ganttbar{\textbf{9} Inlezen downsampling}{1}{2}\\
 
-\ganttgroup{Sprint 1}{2}{3} \\
+\ganttgroup{Sprint 1}{3}{4} \\
 \ganttbar{\textbf{1} Planning (Gantt)}{3}{4} \\
 \ganttbar{\textbf{2} Unit tests bijwerken}{3}{4} \\
 \ganttbar{\textbf{3} Projecten samenvoegen}{3}{4} \\
 \ganttbar{\textbf{4} SCRUM implementeren}{3}{4} \\
-\ganttbar{\textbf{1} Read raw bytes}{3}{4} \\
-\ganttbar{\textbf{2} Implement Fourier}{2}{3} \\
+\ganttbar{\textbf{5} Read raw bytes}{3}{4} \\
+\ganttbar{\textbf{6} Implement Fourier}{3}{4} \\
 
-\ganttgroup{Sprint 4}{4}{10} \\
-\ganttbar{\textbf{WBS 2.1} Activity E}{4}{5} \\
-\ganttbar{\textbf{WBS 2.2} Activity F}{6}{8} \\
-\ganttbar	{\textbf{WBS 2.3} Activity G}{9}{10}\\
-\ganttgroup{Sprint 2}{4}{10} \\
-\ganttbar{\textbf{WBS 2.1} Activity E}{4}{5} \\
-\ganttbar{\textbf{WBS 2.2} Activity F}{6}{8} \\
-\ganttbar	{\textbf{WBS 2.3} Activity G}{9}{10}
+\ganttgroup{Sprint 2}{5}{6} \\
+\ganttbar{\textbf{1} Update unit tests}{5}{6} \\
+\ganttbar{\textbf{2} Algo filterbank data}{5}{6} \\
+\ganttbar{\textbf{3} Github CI release}{5}{6}\\
+\ganttbar{\textbf{4} Create repository documentation}{5}{6}\\
 \end{ganttchart}
 
 \end{document}
