--- a/Planning/Planning_gantt.tex
+++ b/Planning/Planning_gantt.tex
@@ -51,26 +51,32 @@
 ]{WEEKS:\quad1}{1}
 \gantttitlelist{2,...,15}{1} \\
 \ganttgroup{Sprint 0}{1}{2} \\
-\ganttbar{\textbf{2} Travis with Pylint and Codecov}{1}{2} \\
-\ganttbar{\textbf{3} Hello world with Python}{1}{2}\\
-\ganttbar{\textbf{4} Requirements in README}{1}{2}\\
-\ganttbar{\textbf{5} Hello world with Python}{1}{2}\\
-\ganttbar{\textbf{6} License toevoegen}{1}{2} \\
-\ganttbar{\textbf{7} Unit tests}{1}{2} \\
-\ganttbar{\textbf{8} Libraries samenvoegen}{1}{2}\\
-\ganttbar{\textbf{9} Hello world with Python}{1}{2} \\
-\ganttbar{\textbf{10} Requirements in README}{1}{2} \\
-\ganttbar[bar/.append style={fill=red}]{\textbf{11} Connectie met Sigproc}{1}{2} \\
-\ganttbar[bar/.append style={fill=red}]{\textbf{12} Inlezen downsampling}{1}{2}\\
-\ganttbar[bar/.append style={fill=red}]{\textbf{13} Hello world with Python}{1}{2} \\
-\ganttbar[bar/.append style={fill=blue}]{\textbf{14} Use pyrtlsdr package}{1}{2} \\
-\ganttbar[bar/.append style={fill=blue}]{\textbf{15} Fourier transformation }{1}{2} \\
+\ganttbar{\textbf{1} Travis with Pylint and Codecov}{1}{2} \\
+\ganttbar{\textbf{2} Hello world with Python}{1}{2}\\
+\ganttbar{\textbf{3} Requirements in README}{1}{2}\\
+\ganttbar{\textbf{4} Hello world with Python}{1}{2}\\
+\ganttbar{\textbf{5} Add license}{1}{2} \\
+\ganttbar{\textbf{6} Unit tests}{1}{2} \\
+\ganttbar{\textbf{7} Link libraries}{1}{2}\\
+\ganttbar{\textbf{8} Hello world with Python}{1}{2} \\
+\ganttbar[bar/.append style={fill=red}]{\textbf{9} Sigproc connection}{1}{2} \\
+\ganttbar[bar/.append style={fill=red}]{\textbf{10} Inlezen downsampling}{1}{2}\\
+\ganttbar[bar/.append style={fill=red}]{\textbf{11} Hello world with Python}{1}{2} \\
+\ganttbar[bar/.append style={fill=blue}]{\textbf{12} Use pyrtlsdr package}{1}{2} \\
+\ganttbar[bar/.append style={fill=blue}]{\textbf{13} Fourier transformation }{1}{2} \\
 
 \ganttgroup{Sprint 1}{3}{4} \\
 \ganttbar{\textbf{1} Planning (Gantt)}{3}{4} \\
-\ganttbar{\textbf{2} Unit tests bijwerken}{3}{4} \\
-\ganttbar{\textbf{3} Projecten samenvoegen}{3}{4} \\
-\ganttbar{\textbf{4} SCRUM implementeren}{3}{4} \\
+\ganttbar{\textbf{2} Update unit tests}{3}{4} \\
+\ganttbar{\textbf{3} Merge projects}{3}{4} \\
+\ganttbar[bar/.append style={fill=red}]{\textbf{4} Read raw bytes}{3}{4} \\
+\ganttbar[bar/.append style={fill=blue}]{\textbf{5} Implement Fourier on IO endpoint}{3}{4} \\
+
+\ganttgroup{Sprint 2}{5}{6} \\
+\ganttbar{\textbf{1} Update unit tests}{5}{6} \\
+\ganttbar{\textbf{2} Algo filterbank data}{5}{6} \\
+\ganttbar{\textbf{3} Github CI release}{5}{6}\\
+\ganttbar{\textbf{4} Create repository documentation}{5}{6}\\
 \ganttbar[bar/.append style={fill=red}]{\textbf{1} Read raw bytes}{3}{4} \\
 \ganttbar[bar/.append style={fill=blue}]{\textbf{2} Implement Fourier on IO endpoint}{3}{4} \\
 
