--- a/Planning/Planning_gantt.tex
+++ b/Planning/Planning_gantt.tex
@@ -19,7 +19,7 @@
 	canvas/.append style={fill=none, draw=black!5, line width=.75pt},
 	hgrid style/.style={draw=black!5, line width=.75pt},
 	vgrid={*1{draw=black!5, line width=.75pt}},
-	today=2,
+	today=3,
 	today rule/.style={
 		draw=black!64,
 		dash pattern=on 3.5pt off 4.5pt,
@@ -54,16 +54,53 @@
 \ganttbar{\textbf{1} Travis with Pylint and Codecov}{1}{2} \\
 \ganttbar{\textbf{2} Hello world with Python}{1}{2}\\
 \ganttbar{\textbf{3} Requirements in README}{1}{2}\\
-\ganttbar{\textbf{4} Hello world with Python}{1}{2}\\
-\ganttbar{\textbf{5} Add license}{1}{2} \\
-\ganttbar{\textbf{6} Unit tests}{1}{2} \\
-\ganttbar{\textbf{7} Link libraries}{1}{2}\\
-\ganttbar{\textbf{8} Hello world with Python}{1}{2} \\
-\ganttbar[bar/.append style={fill=red}]{\textbf{9} Sigproc connection}{1}{2} \\
-\ganttbar[bar/.append style={fill=red}]{\textbf{10} Inlezen downsampling}{1}{2}\\
-\ganttbar[bar/.append style={fill=red}]{\textbf{11} Hello world with Python}{1}{2} \\
-\ganttbar[bar/.append style={fill=blue}]{\textbf{12} Use pyrtlsdr package}{1}{2} \\
-\ganttbar[bar/.append style={fill=blue}]{\textbf{13} Fourier transformation }{1}{2} \\
+\ganttbar{\textbf{4} Add license}{1}{2} \\
+\ganttbar{\textbf{5} Unit tests}{1}{2} \\
+\ganttbar{\textbf{6} Link libraries}{1}{2}\\
+\ganttbar{\textbf{7} Hello world with Python}{1}{2} \\
+\ganttbar[bar/.append style={fill=red}]{\textbf{8} Sigproc connection}{1}{2} \\
+\ganttbar[bar/.append style={fill=red}]{\textbf{9} Downsampling}{1}{2}\\
+\ganttbar[bar/.append style={fill=red}]{\textbf{10} Hello world with Python}{1}{2} \\
+\ganttbar[bar/.append style={fill=blue}]{\textbf{11} Use pyrtlsdr package}{1}{2} \\
+\ganttbar[bar/.append style={fill=blue}]{\textbf{12} Fourier transformation }{1}{2} \\
+
+\end{ganttchart}
+
+\begin{ganttchart}[
+	canvas/.append style={fill=none, draw=black!5, line width=.75pt},
+	hgrid style/.style={draw=black!5, line width=.75pt},
+	vgrid={*1{draw=black!5, line width=.75pt}},
+	today=3,
+	today rule/.style={
+		draw=black!64,
+		dash pattern=on 3.5pt off 4.5pt,
+		line width=1.5pt
+	},
+	today label font=\small\bfseries,
+	title/.style={draw=none, fill=none},
+	title label font=\bfseries\footnotesize,
+	title label node/.append style={below=7pt},
+	include title in canvas=false,
+	bar label font=\mdseries\small\color{black!70},
+	bar label node/.append style={left=2cm},
+	bar/.append style={draw=none, fill=black!63},
+	bar incomplete/.append style={fill=barblue},
+	bar progress label font=\mdseries\footnotesize\color{black!70},
+	group incomplete/.append style={fill=groupblue},
+	group left shift=0,
+	group right shift=0,
+	group height=.5,
+	group peaks tip position=0,
+	group label node/.append style={left=.6cm},
+	group progress label font=\bfseries\small,
+	link/.style={-latex, line width=1.5pt, linkred},
+	link label font=\scriptsize\bfseries,
+	link label node/.append style={below left=-2pt and 0pt}
+]{1}{13}
+\gantttitle[
+	title label node/.append style={below left=7pt and -3pt}
+]{WEEKS:\quad1}{1}
+\gantttitlelist{2,...,15}{1} \\
 
 \ganttgroup{Sprint 1}{3}{4} \\
 \ganttbar{\textbf{1} Planning (Gantt)}{3}{4} \\
@@ -74,12 +111,14 @@
 
 \ganttgroup{Sprint 2}{5}{6} \\
 \ganttbar{\textbf{1} Update unit tests}{5}{6} \\
-\ganttbar{\textbf{2} Algo filterbank data}{5}{6} \\
-\ganttbar{\textbf{3} Github CI release}{5}{6}\\
-\ganttbar{\textbf{4} Create repository documentation}{5}{6}\\
-\ganttbar[bar/.append style={fill=red}]{\textbf{1} Read raw bytes}{3}{4} \\
-\ganttbar[bar/.append style={fill=blue}]{\textbf{2} Implement Fourier on IO endpoint}{3}{4} \\
+\ganttbar{\textbf{2} Github CI release}{5}{6} \\
+\ganttbar{\textbf{3} Create repository documentation}{5}{6} \\
+\ganttbar[bar/.append style={fill=red}]{\textbf{4} Read raw bytes}{5}{6} \\
+\ganttbar[bar/.append style={fill=blue}]{\textbf{5} Implement Fourier on IO endpoint}{5}{6} \\
+\ganttbar[bar/.append style={fill=blue}]{\textbf{6} Waterfall }{5}{6} \\
 
 \end{ganttchart}
+
+
 
 \end{document}
