Reverted merge request stuff

--- a/Planning/Planning_gantt.tex
+++ b/Planning/Planning_gantt.tex
@@ -4,7 +4,7 @@
 
 \begin{document}
 \title{Planning Software For Science.}
-\author{Menno Prinzhorn}
+\author{Menno Prinzhorn, Albert van Kiel, Robin Baneken, Robert Kleef, \and Max van Hasselt, Timo Hermsen}
 \date{September 2018}
 \maketitle
 
@@ -57,12 +57,10 @@
 \ganttbar{\textbf{4} Add license}{1}{2} \\
 \ganttbar{\textbf{5} Unit tests}{1}{2} \\
 \ganttbar{\textbf{6} Link libraries}{1}{2}\\
-\ganttbar{\textbf{7} Hello world with Python}{1}{2} \\
-\ganttbar[bar/.append style={fill=red}]{\textbf{8} Sigproc connection}{1}{2} \\
-\ganttbar[bar/.append style={fill=red}]{\textbf{9} Downsampling}{1}{2}\\
-\ganttbar[bar/.append style={fill=red}]{\textbf{10} Hello world with Python}{1}{2} \\
-\ganttbar[bar/.append style={fill=blue}]{\textbf{11} Use pyrtlsdr package}{1}{2} \\
-\ganttbar[bar/.append style={fill=blue}]{\textbf{12} Fourier transformation }{1}{2} \\
+\ganttbar[bar/.append style={fill=red}]{\textbf{7} Sigproc connection}{1}{2} \\
+\ganttbar[bar/.append style={fill=red}]{\textbf{8} Downsampling}{1}{2}\\
+\ganttbar[bar/.append style={fill=blue}]{\textbf{9} Use pyrtlsdr package}{1}{2} \\
+\ganttbar[bar/.append style={fill=blue}]{\textbf{10} Fourier transformation }{1}{2} \\
 
 \end{ganttchart}
 
@@ -114,8 +112,7 @@
 \ganttbar{\textbf{2} Github CI release}{5}{6} \\
 \ganttbar{\textbf{3} Create repository documentation}{5}{6} \\
 \ganttbar[bar/.append style={fill=red}]{\textbf{4} Read raw bytes}{5}{6} \\
-\ganttbar[bar/.append style={fill=blue}]{\textbf{5} Implement Fourier on IO endpoint}{5}{6} \\
-\ganttbar[bar/.append style={fill=blue}]{\textbf{6} Waterfall }{5}{6} \\
+\ganttbar[bar/.append style={fill=blue}]{\textbf{5} Implement waterfall for fourier transformation}{5}{6} \\
 
 \end{ganttchart}
 
