--- a/Planning/Planning_gantt.tex
+++ b/Planning/Planning_gantt.tex
@@ -15,6 +15,13 @@
 \renewcommand\mddefault{mc}
 \renewcommand\bfdefault{bc}
 \sffamily
+
+\begin{itemize}
+	\item Beide teams
+	\item[\textcolor{blue}{\textbullet}] Algorithm
+	\item[\textcolor{red}{\textbullet}] IO
+\end{itemize}
+
 \begin{ganttchart}[
 	canvas/.append style={fill=none, draw=black!5, line width=.75pt},
 	hgrid style/.style={draw=black!5, line width=.75pt},
@@ -63,7 +70,7 @@
 \ganttbar[bar/.append style={fill=red}]{\textbf{10} Inlezen downsampling}{1}{2}\\
 \ganttbar[bar/.append style={fill=red}]{\textbf{11} Hello world with Python}{1}{2} \\
 \ganttbar[bar/.append style={fill=blue}]{\textbf{12} Use pyrtlsdr package}{1}{2} \\
-\ganttbar[bar/.append style={fill=blue}]{\textbf{13} Fourier transformation }{1}{2} \\
+\ganttbar[bar/.append style={fill=blue}]{\textbf{15} Fourier transformation }{1}{2} \\
 
 \ganttgroup{Sprint 1}{3}{4} \\
 \ganttbar{\textbf{1} Planning (Gantt)}{3}{4} \\
