fix merge conflicts

--- a/Planning/Planning_gantt.tex
+++ b/Planning/Planning_gantt.tex
@@ -15,12 +15,7 @@
 \renewcommand\mddefault{mc}
 \renewcommand\bfdefault{bc}
 \sffamily
-
-\begin{itemize}
-	\item Beide teams
-	\item[\textcolor{blue}{\textbullet}] Algorithm
-	\item[\textcolor{red}{\textbullet}] IO
-\end{itemize}
+\newpage
 
 \begin{ganttchart}[
 	canvas/.append style={fill=none, draw=black!5, line width=.75pt},
@@ -61,18 +56,6 @@
 \ganttbar{\textbf{1} Travis with Pylint and Codecov}{1}{2} \\
 \ganttbar{\textbf{2} Hello world with Python}{1}{2}\\
 \ganttbar{\textbf{3} Requirements in README}{1}{2}\\
-<<<<<<< HEAD
-\ganttbar{\textbf{4} Hello world with Python}{1}{2}\\
-\ganttbar{\textbf{5} Add license}{1}{2} \\
-\ganttbar{\textbf{6} Unit tests}{1}{2} \\
-\ganttbar{\textbf{7} Link libraries}{1}{2}\\
-\ganttbar{\textbf{8} Hello world with Python}{1}{2} \\
-\ganttbar[bar/.append style={fill=red}]{\textbf{9} Sigproc connection}{1}{2} \\
-\ganttbar[bar/.append style={fill=red}]{\textbf{10} Inlezen downsampling}{1}{2}\\
-\ganttbar[bar/.append style={fill=red}]{\textbf{11} Hello world with Python}{1}{2} \\
-\ganttbar[bar/.append style={fill=blue}]{\textbf{12} Use pyrtlsdr package}{1}{2} \\
-\ganttbar[bar/.append style={fill=blue}]{\textbf{15} Fourier transformation }{1}{2} \\
-=======
 \ganttbar{\textbf{4} Add license}{1}{2} \\
 \ganttbar{\textbf{5} Unit tests}{1}{2} \\
 \ganttbar{\textbf{6} Link libraries}{1}{2}\\
