re-added legend

--- a/Planning/Planning_gantt.tex
+++ b/Planning/Planning_gantt.tex
@@ -16,7 +16,11 @@
 \renewcommand\bfdefault{bc}
 \sffamily
 \newpage
-
+\begin{itemize}
+	\item Beide teams
+	\item[\textcolor{blue}{\textbullet}] Algorithm
+	\item[\textcolor{red}{\textbullet}] IO
+\end{itemize}
 \begin{ganttchart}[
 	canvas/.append style={fill=none, draw=black!5, line width=.75pt},
 	hgrid style/.style={draw=black!5, line width=.75pt},
