--- a/Planning/Planning_gantt.tex
+++ b/Planning/Planning_gantt.tex
@@ -5,7 +5,7 @@
 \begin{document}
 \title{Planning Software For Science.}
 \author{Menno Prinzhorn, Albert van Kiel, Robin Baneke, Robert Kleef, \and Max van Hasselt, Timo Hermsen}
-\date{September 2018}
+\date{Oktober 2018}
 \maketitle
 \begin{landscape}
 \begin{minipage}{\textwidth}
@@ -27,7 +27,7 @@
 	vgrid={*1{draw=black!5, line width=.75pt}},
 	x unit=1cm,
 	y unit chart=.74cm,
-	today=3,
+	today=6,
 	today rule/.style={
 		draw=black!64,
 		dash pattern=on 3.5pt off 4.5pt,
@@ -76,7 +76,7 @@
 	canvas/.append style={fill=none, draw=black!5, line width=.75pt},
 	hgrid style/.style={draw=black!5, line width=.75pt},
 	vgrid={*1{draw=black!5, line width=.75pt}},
-	today=3,
+	today=6,
 	today rule/.style={
 		draw=black!64,
 		dash pattern=on 3.5pt off 4.5pt,
@@ -108,7 +108,6 @@
 	title label node/.append style={below left=7pt and -3pt}
 ]{WEEKS:\quad1}{1}
 \gantttitlelist{2,...,15}{1} \\
->>>>>>> 48f93b273503c4acf9c22c7f4dad69e7442baced
 
 \ganttgroup{Sprint 1}{3}{4} \\
 \ganttbar{\textbf{1} Planning (Gantt)}{3}{4} \\
@@ -121,12 +120,11 @@
 \ganttbar{\textbf{1} Update unit tests}{5}{6} \\
 \ganttbar{\textbf{2} Github CI release}{5}{6} \\
 \ganttbar{\textbf{3} Create repository documentation}{5}{6} \\
-\ganttbar[bar/.append style={fill=red}]{\textbf{4} Read raw bytes}{5}{6} \\
-\ganttbar[bar/.append style={fill=blue}]{\textbf{5} Implement waterfall for FFT}{5}{6} \\
+\ganttbar{\textbf{4} Create technical documentation}{5}{6} \\
+\ganttbar{\textbf{5} Create examples for filterbank, fft and plot}{5}{6} \\
+\ganttbar[bar/.append style={fill=blue}]{\textbf{6} Implement waterfall for FFT}{5}{6} \\
 
 \end{ganttchart}
 \end{landscape}
-
-
 
 \end{document}
