--- a/Planning/Planning_gantt.tex
+++ b/Planning/Planning_gantt.tex
@@ -124,6 +124,16 @@
 \ganttbar{\textbf{5} Create examples for filterbank, fft and plot}{5}{6} \\
 \ganttbar[bar/.append style={fill=blue}]{\textbf{6} Implement waterfall for FFT}{5}{6} \\
 
+\ganttgroup{Sprint 3}{7}{8} \\
+\ganttbar{\textbf{1} Gantt planning updaten}{7}{8} \\
+\ganttbar{\textbf{2} Documentation waterfall class}{7}{8} \\
+\ganttbar{\textbf{3} Tests for waterfall}{7}{8} \\
+\ganttbar{\textbf{4} Unit tests for new PSD}{7}{8} \\
+\ganttbar{\textbf{5} Meeting E-Science center}{7}{8} \\
+\ganttbar[bar/.append style={fill=blue}]{\textbf{6} Method to enable data streams}{7}{8} \\
+\ganttbar[bar/.append style={fill=blue}]{\textbf{7} Downsample input timeseries}{7}{8} \\
+\ganttbar[bar/.append style={fill=blue}]{\textbf{8} Dedisperse input timeseries}{7}{8} \\
+
 \end{ganttchart}
 \end{landscape}
 
