--- a/Planning/Planning_gantt.tex
+++ b/Planning/Planning_gantt.tex
@@ -123,6 +123,44 @@
 \ganttbar{\textbf{4} Create technical documentation}{5}{6} \\
 \ganttbar{\textbf{5} Create examples for filterbank, fft and plot}{5}{6} \\
 \ganttbar[bar/.append style={fill=blue}]{\textbf{6} Implement waterfall for FFT}{5}{6} \\
+\end{ganttchart}
+
+\begin{ganttchart}[
+	canvas/.append style={fill=none, draw=black!5, line width=.75pt},
+	hgrid style/.style={draw=black!5, line width=.75pt},
+	vgrid={*1{draw=black!5, line width=.75pt}},
+	today=6,
+	today rule/.style={
+		draw=black!64,
+		dash pattern=on 3.5pt off 4.5pt,
+		line width=1.5pt
+	},
+	x unit=1cm,
+	today label font=\small\bfseries,
+	title/.style={draw=none, fill=none},
+	title label font=\bfseries\footnotesize,
+	title label node/.append style={below=7pt},
+	include title in canvas=false,
+	bar label font=\mdseries\small\color{black!70},
+	bar label node/.append style={left=2cm},
+	bar/.append style={draw=none, fill=black!63},
+	bar incomplete/.append style={fill=barblue},
+	bar progress label font=\mdseries\footnotesize\color{black!70},
+	group incomplete/.append style={fill=groupblue},
+	group left shift=0,
+	group right shift=0,
+	group height=.5,
+	group peaks tip position=0,
+	group label node/.append style={left=.6cm},
+	group progress label font=\bfseries\small,
+	link/.style={-latex, line width=1.5pt, linkred},
+	link label font=\scriptsize\bfseries,
+	link label node/.append style={below left=-2pt and 0pt}
+]{1}{13}
+\gantttitle[
+	title label node/.append style={below left=7pt and -3pt}
+]{WEEKS:\quad1}{1}
+\gantttitlelist{2,...,15}{1} \\
 
 \ganttgroup{Sprint 3}{7}{8} \\
 \ganttbar{\textbf{1} Gantt planning updaten}{7}{8} \\
