updated sprint 3 and 4

--- a/Planning/Planning_gantt.tex
+++ b/Planning/Planning_gantt.tex
@@ -163,12 +163,13 @@
 \gantttitlelist{2,...,15}{1} \\
 
 \ganttgroup{Sprint 3}{7}{8} \\
-\ganttbar[bar/.append style={fill=red}]{\textbf{1} Detect pulsars}{7}{8} \\
-\ganttbar[bar/.append style={fill=red}]{\textbf{2} Stream dataset}{7}{8} \\
-\ganttbar[bar/.append style={fill=blue}]{\textbf{3} Build waterfall module}{7}{8} \\
-\ganttbar{\textbf{4} Meeting E-Science center}{7}{8} \\
-\ganttbar[bar/.append style={fill=blue}]{\textbf{6} Dedisperse input timeseries}{7}{8} \\
-\ganttbar[bar/.append style={fill=red}]{\textbf{7} Decimate input timeseries}{7}{8} \\
+\ganttbar[bar/.append style={fill=red}]{\textbf{1} Stream dataset}{7}{8} \\
+\ganttbar[bar/.append style={fill=blue}]{\textbf{2} Build waterfall module}{7}{8} \\
+\ganttbar{\textbf{3} Meeting E-Science center}{7}{8} \\
+\ganttbar[bar/.append style={fill=blue}]{\textbf{4} Dedisperse input timeseries}{7}{8} \\
+\ganttbar[bar/.append style={fill=red}]{\textbf{5} Decimate input timeseries}{7}{8} \\
+\ganttbar[bar/.append style={fill=red}]{\textbf{6} Plot timeseries}{7}{8} \\
+\ganttbar[bar/.append style={fill=red}]{\textbf{7} Algoritmes benchmarken}{7}{8} \\
 
 \end{ganttchart}
 
@@ -211,7 +212,8 @@
 	
 	\ganttgroup{Sprint 4}{9}{10} \\
 	\ganttbar{\textbf{1} Parallelization}{9}{10} \\
-	\ganttbar{\textbf{2} }{9}{10} \\
+	\ganttbar{\textbf{2} Research OpenCL and Cuda}{9}{10} \\
+	\ganttbar{\textbf{3} Generate filterbank data}{9}{10} \\
 	
 \end{ganttchart}
 
