updated sprint 4 planning

--- a/Planning/Planning_gantt.tex
+++ b/Planning/Planning_gantt.tex
@@ -166,7 +166,7 @@
 \ganttbar[bar/.append style={fill=red}]{\textbf{1} Stream dataset}{7}{8} \\
 \ganttbar[bar/.append style={fill=blue}]{\textbf{2} Build waterfall module}{7}{8} \\
 \ganttbar{\textbf{3} Meeting E-Science center}{7}{8} \\
-\ganttbar[bar/.append style={fill=blue}]{\textbf{4} Dedisperse input timeseries}{7}{8} \\
+\ganttbar{\textbf{4} Dedisperse input timeseries}{7}{8} \\
 \ganttbar[bar/.append style={fill=red}]{\textbf{5} Decimate input timeseries}{7}{8} \\
 \ganttbar[bar/.append style={fill=red}]{\textbf{6} Plot timeseries}{7}{8} \\
 \ganttbar[bar/.append style={fill=red}]{\textbf{7} Algoritmes benchmarken}{7}{8} \\
@@ -214,6 +214,8 @@
 	\ganttbar{\textbf{1} Parallelization}{9}{10} \\
 	\ganttbar{\textbf{2} Research OpenCL and Cuda}{9}{10} \\
 	\ganttbar{\textbf{3} Generate filterbank data}{9}{10} \\
+	\ganttbar[bar/.append style={fill=blue}]{\textbf{4} Detect pulsars}{9}{10} \\
+	\ganttbar{\textbf{3} Test with 1tb filterbank file}{9}{10} \\
 	
 \end{ganttchart}
 
